config/deploy/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-sample-app-web
  labels:
    name: k8s-sample-app-web
spec:
  selector:
    name: k8s-sample-app-web
  ports:
    - port: 3001
      name: k8s-sample-app-web
