config/deploy/04-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-sample-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: k8s-sample-app.example.com
      http:
        paths:
          - backend:
              serviceName: k8s-sample-app-web
              servicePort: 3001
